--- a/index.html
+++ b/index.html
@@ -5,63 +5,63 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles/video.css">
-<link rel="stylesheet" href="styles/header.css">
-<link rel="stylesheet" href="styles/general.css">
-<link rel="stylesheet" href="styles/sidebar.css">
+<link rel="stylesheet" href="video.css">
+<link rel="stylesheet" href="header.css">
+<link rel="stylesheet" href="general.css">
+<link rel="stylesheet" href="sidebar.css">
     </head>
     <body>
         <header class="header">
             <div class="left-section">
-                <img class="hamburger-menu" src="icons/hamburger-menu.svg" alt="">
-                <img class="youtube-logo" src="icons/youtube-logo.svg" alt="">
+                <img class="hamburger-menu" src="hamburger-menu.svg" alt="">
+                <img class="youtube-logo" src="youtube-logo.svg" alt="">
             </div>
             <div class="middle-section">
                 <input class="search-bar" type="text" placeholder="search">
                 <button class="search-button">
-                    <img class="search-icon" src="icons/search.svg" alt="">
+                    <img class="search-icon" src="search.svg" alt="">
                     <div class="tooltip">Search</div>
                 </button>
                 <button class="voice-search-button">
-                    <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="">
+                    <img class="voice-search-icon" src="voice-search-icon.svg" alt="">
                     <div class="tooltip">Search</div>
                 </button>
             </div>
             <div class="right-section">
-                <img class="upload-icon" src="icons/upload.svg" alt="">
-                <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
+                <img class="upload-icon" src="upload.svg" alt="">
+                <img class="youtube-apps-icon" src="youtube-apps.svg" alt="">
             <div class="notifications-icon-container">
-                <img class="notifications-icon" src="icons/notifications.svg" alt="">
+                <img class="notifications-icon" src="notifications.svg" alt="">
                 <div class="notifications-count">3</div>
             </div>
-                <img class="current-user-picture" src="channel-pictures/my-channel.jpeg" alt="">
+                <img class="current-user-picture" src="my-channel.jpeg" alt="">
             </div>
         </header>
         <nav class="sidebar">
             <div class="sidebar-link">
-                <img src="icons/home.svg" alt="">
+                <img src="home.svg" alt="">
                 <div>
                     Home
                 </div>
             </div>
             <div class="sidebar-link">
-                <img src="icons/explore.svg" alt="">
+                <img src="explore.svg" alt="">
                 <div>Explore</div>
             </div>
             <div class="sidebar-link">
-                <img src="icons/subscriptions.svg" alt="">
+                <img src="subscriptions.svg" alt="">
                 <div>Subscriptions</div>
             </div>
             <div class="sidebar-link">
-                <img src="icons/originals.svg" alt="">
+                <img src="originals.svg" alt="">
                 <div>Originals</div>
             </div>
             <div class="sidebar-link">
-                <img src="icons/youtube-music.svg" alt="">
+                <img src="youtube-music.svg" alt="">
                 <div>Youtube Music</div>
             </div>
             <div class="sidebar-link">
-                <img src="icons/library.svg" alt="">
+                <img src="library.svg" alt="">
                 <div>Library</div>
             </div>
         </nav>
@@ -69,12 +69,12 @@
             <section class="video-grid">
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="thumbnail" src="thumbnail-1.webp" alt="">
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid"> 
                     <div class="channel-picture">
-                        <img class="profile-picture" src="channel-pictures/channel-1.jpeg" alt="">
+                        <img class="profile-picture" src="channel-1.jpeg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title"> 
@@ -88,12 +88,12 @@
 
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-2.webp" alt="">
+                    <img class="thumbnail" src="thumbnail-2.webp" alt="">
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid"> 
                     <div class="channel-picture">
-                        <img class="profile-picture" src="channel-pictures/channel-2.jpeg" alt="">
+                        <img class="profile-picture" src="channel-2.jpeg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -109,12 +109,12 @@
 
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-3.webp" alt="">
+                    <img class="thumbnail" src="thumbnail-3.webp" alt="">
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid"> 
                     <div class="channel-picture">
-                        <img class="profile-picture" src="channel-pictures/channel-3.jpeg" alt="">
+                        <img class="profile-picture" src="channel-3.jpeg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -128,12 +128,12 @@
 
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-4.webp" alt="">
+                    <img class="thumbnail" src="thumbnail-4.webp" alt="">
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid"> 
                     <div class="channel-picture">
-                        <img class="profile-picture" src="channel-pictures/channel-4.jpeg" alt="">
+                        <img class="profile-picture" src="channel-4.jpeg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -149,12 +149,12 @@
 
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-5.webp" alt="">
+                    <img class="thumbnail" src="thumbnail-5.webp" alt="">
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid"> 
                     <div class="channel-picture">
-                        <img class="profile-picture" src="channel-pictures/channel-5.jpeg" alt="">
+                        <img class="profile-picture" src="channel-5.jpeg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
@@ -168,12 +168,12 @@
 
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-6.webp" alt="">
+                    <img class="thumbnail" src="thumbnail-6.webp" alt="">
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid"> 
                     <div class="channel-picture">
-                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg" alt="">
+                        <img class="profile-picture" src="channel-6.jpeg" alt="">
                     </div>
                     <div class="video-info">
                         <p class="video-title">
